# Ecng

./: .gitignore  .gitmodules  CLAUDE.md  Ecng.pfx  Ecng.sln  Ecng.slnx  Ecng.snk  EcngAssemblyInfo.cs  Ecng_dev.sln  README.md  common.props  common_target.props  common_target_common.props  common_target_multi.props  common_target_multi_sign.props  common_versions.props  job-logs.txt  nuget-republish-guide.md  pack-xc.bat  pack.bat
Net.HPSocket/HPSocket/: .gitignore  CMakeLists.txt
Net.HPSocket/HPSocket/Include/: stdafx.h
Net.HPSocket/HPSocket/Include/HPSocket/: HPSocket-SSL.h  HPSocket.h  HPSocket4C-SSL.h  HPSocket4C.h  HPTypeDef.h  SocketInterface.h
Net.HPSocket/HPSocket/Project/: HPSocket-2019.sln
Net.HPSocket/HPSocket/Project/HPSocketDLL4C-2019/: HPSocketDLL4C.sln  HPSocketDLL4C.vcxproj  HPSocketDLL4C.vcxproj.filters  dllmain.cpp  stdafx.cpp  stdafx.h
Net.HPSocket/HPSocket/Src/: ArqHelper.cpp  ArqHelper.h  HPSocket-SSL.cpp  HPSocket.cpp  HPSocket4C-SSL.cpp  HPSocket4C.cpp  HPThreadPool.cpp  HPThreadPool.h  HttpAgent.cpp  HttpAgent.h  HttpClient.cpp  HttpClient.h  HttpCookie.cpp  HttpCookie.h  HttpHelper.cpp  HttpHelper.h  HttpServer.cpp  HttpServer.h  InternalDef.h  MiscHelper.cpp  MiscHelper.h  SSLAgent.cpp  SSLAgent.h  SSLClient.cpp  SSLClient.h  SSLHelper.cpp  SSLHelper.h  SSLServer.cpp  SSLServer.h  SocketHelper.cpp  SocketHelper.h  SocketObject4C.h  TcpAgent.cpp  TcpAgent.h  TcpClient.cpp  TcpClient.h  TcpPackAgent.cpp  TcpPackAgent.h  TcpPackClient.cpp  TcpPackClient.h  (+22 more)
Net.HPSocket/HPSocket/Src/Common/: BufferPool.cpp  BufferPool.h  BufferPtr.cpp  BufferPtr.h  CriticalSection.cpp  CriticalSection.h  Event.cpp  Event.h  FuncHelper.cpp  FuncHelper.h  GeneralHelper.cpp  SE.h  (+18 more)
Net.HPSocket/HPSocket/cmake/: GitUtils.cmake  MiscUtils.cmake  Solar.cmake
(+4890 files in other folders)
